<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/sair"
          android:title="@string/options_sair" 
          android:icon="@drawable/anormalidade"/>
    <item android:id="@+id/menuPrincipal"
          android:title="@string/options_menu_principal"/>
    <item android:id="@+id/listCadastros"
          android:title="@string/options_lista_cadastro"/>
    <item android:id="@+id/adicionarNovo"
          android:title="@string/options_adicionar_imovel" 
          android:icon="@drawable/adicionar"/>
    <item android:id="@+id/imovelAnterior"
          android:icon="@drawable/anterior"
          android:title="Imóvel Anterior" />
    <item android:id="@+id/proximoImovel"
          android:icon="@drawable/proximo"
          android:title="Próximo Imóvel" />
</menu>