<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fundocadastro"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25sp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/relatorio_do_arquivo"
            android:textColor="@color/textColor"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textoTotal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/relatorio_total"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/valorTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressTotal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
            android:indeterminateOnly="false"
            android:maxHeight="12dip"
            android:minHeight="12dip"
            android:progressDrawable="@android:drawable/progress_horizontal" >
        </ProgressBar>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textoInformativos"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/relatorio_informativos"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/valorInformativos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressInformativos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
            android:indeterminateOnly="false"
            android:maxHeight="12dip"
            android:minHeight="12dip"
            android:progressDrawable="@android:drawable/progress_horizontal" >
        </ProgressBar>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textoPendentes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/relatorio_pendentes"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/valorPendentes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressPendentes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
            android:indeterminateOnly="false"
            android:maxHeight="12dip"
            android:minHeight="12dip"
            android:progressDrawable="@android:drawable/progress_horizontal" >
        </ProgressBar>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textoTotalFinalizados"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/relatorio_total_finalizados"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/valorTotalFinalizados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressTotalFinalizados"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
            android:indeterminateOnly="false"
            android:maxHeight="12dip"
            android:minHeight="12dip"
            android:progressDrawable="@android:drawable/progress_horizontal" >
        </ProgressBar>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textoFinalizados"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/relatorio_finalizados"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/valorFinalizados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressFinalizados"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
            android:indeterminateOnly="false"
            android:maxHeight="12dip"
            android:minHeight="12dip"
            android:progressDrawable="@android:drawable/progress_horizontal" >
        </ProgressBar>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textoFinalizadosAnormalidade"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/relatorio_finalizados_anormalidade"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/valorFinalizadosAnormalidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressFinalizadosAnormalidade"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
            android:indeterminateOnly="false"
            android:maxHeight="12dip"
            android:minHeight="12dip"
            android:progressDrawable="@android:drawable/progress_horizontal" >
        </ProgressBar>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textoNovos"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/relatorio_novos"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/valorNovos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressNovos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
            android:indeterminateOnly="false"
            android:maxHeight="12dip"
            android:minHeight="12dip"
            android:progressDrawable="@android:drawable/progress_horizontal" >
        </ProgressBar>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textoExcluidos"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/relatorio_excluidos"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/valorExcluidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressExcluidos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
            android:indeterminateOnly="false"
            android:maxHeight="12dip"
            android:minHeight="12dip"
            android:progressDrawable="@android:drawable/progress_horizontal" >
        </ProgressBar>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textoNaoTransmitidos"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/relatorio_nao_transmitidos"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/valorNaoTransmitidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressNaoTransmitidos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
            android:indeterminateOnly="false"
            android:maxHeight="12dip"
            android:minHeight="12dip"
            android:progressDrawable="@android:drawable/progress_horizontal" >
        </ProgressBar>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textoTransmitidos"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/relatorio_transmitidos"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/valorTransmitidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressTransmitidos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
            android:indeterminateOnly="false"
            android:maxHeight="12dip"
            android:minHeight="12dip"
            android:progressDrawable="@android:drawable/progress_horizontal" >
        </ProgressBar>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textoTransmitidosInconsistencia"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/relatorio_transmitidos_inconsistencia"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/valorTransmitidosInconsistencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressTransmitidosInconsistencia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
            android:indeterminateOnly="false"
            android:maxHeight="12dip"
            android:minHeight="12dip"
            android:progressDrawable="@android:drawable/progress_horizontal" >
        </ProgressBar>
    </LinearLayout>

</ScrollView>